# llvm-browse

./: .clang-format  .gitignore  CMakeLists.txt  README.md  llvm-browse.cpp  requirements.txt  setup.py
lib/: Argument.cpp  Argument.h  BasicBlock.cpp  BasicBlock.h  CMakeLists.txt  Comdat.cpp  Comdat.h  Constant.cpp  Constant.h  DIUtils.cpp  DIUtils.h  Definition.cpp  Definition.h  Entities.h  Errors.h  Function.cpp  Function.h  GlobalAlias.cpp  GlobalAlias.h  GlobalVariable.cpp  GlobalVariable.h  INavigable.cpp  INavigable.h  IWrapper.cpp  IWrapper.h  Instruction.cpp  Instruction.h  Iterator.h  LLVMBrowse.cpp  LLVMBrowse.h  LLVMRange.cpp  LLVMRange.h  Logging.cpp  Logging.h  MDNode.cpp  MDNode.h  Module.cpp  Module.h  Navigable.cpp  Navigable.h  (+18 more)
llvm_browse/: CMakeLists.txt  __main__.py  application.py  clib.py  llvm_browse.cpp  module.py  types.py  ui.py
llvm_browse_gtk/: CMakeLists.txt  __main__.py  alias.py  application.py  argument.py  block.py  clib.py  entity.py  function.py  global_variable.py  llvm-browse.glade  llvm-browse.gresource.xml  logger.py  metadata.py  module.py  options.py  struct.py  types.py  ui.py
resources/: CMakeLists.txt  llvm-browse.gresource.xml
resources/ui/: llvm-browse.glade
src/: App.cpp  App.h  CMakeLists.txt  application.py  llvm-browse.py  main.cpp  options.py  ui.py
ui/: CMakeLists.txt  UI.cpp  UI.h  llvm-browse.glade  llvm-browse.gresource.xml  llvm-browser.glade
